--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
-body{
+body {
     background-image: url(/assets/images/background.jpg);
     background-repeat: no-repeat;
-    width: 100%;
+    max-width: 100%;
     background-size: cover;
 }
